fixed layout issue with project showcase
- fixed issue with side projects having different sizes overflowing parent container
- fixed issue with overflow property on description set on wrong axes

--- a/src/components/ProjectSlider/ProjectShowcase/ProjectShowcase.module.css
+++ b/src/components/ProjectSlider/ProjectShowcase/ProjectShowcase.module.css
@@ -1,7 +1,7 @@
 .container {
     box-sizing: border-box;
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: minmax(0, 100%);
     grid-template-rows: minmax(0, 30rem) minmax(0, 13rem);
     grid-template-areas: "image_gallery" "description";
 
@@ -43,7 +43,8 @@
 }
 
 .description {
-    overflow-x: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
 
     margin: 0;
     padding: 0;
