--- a/src/components/ProjectSlider/ProjectSlider.module.css
+++ b/src/components/ProjectSlider/ProjectSlider.module.css
@@ -1,6 +1,6 @@
 .container {
     display: grid;
-    grid-template-columns: minmax(0, 15%) minmax(0, 65%) minmax(0, 15%);
+    grid-template-columns: minmax(0, 15%) minmax(0, 65%) minmax(10%, 15%);
     grid-template-areas: "prev_btn project_showcase next_btn";
     grid-column-gap: 10px;
 
@@ -11,13 +11,13 @@
 
 @media screen and (width <= 1000px) {
     .container {
-        grid-template-columns: minmax(0, 11%) minmax(0, 55%) minmax(0, 11%);
+        grid-template-columns: minmax(0, 20%) minmax(0, 60%) minmax(0, 20%);
     }
 }
 
 @media screen and (width <= 550px) {
     .container {
-        grid-template-columns: minmax(0, 11%) minmax(0, 50%) minmax(0, 11%);
+        grid-template-columns: minmax(0, 20%) minmax(0, 60%) minmax(0, 20%);
     }
 }
 
